--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,3 +1,3 @@
 DB_URL=mongodb://127.0.0.1:27017/discussionboard
 EMAIL_ADDRESS=emailfromprojectankit@gmail.com
-EMAIL_PASS=SuckDeep@Findia
+EMAIL_PASS=iamStupid@6900
