--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/passport-google-oauth20": "^2.0.16",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.4",
