--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@types/express": "^5.0.0",
     "@types/nodemailer": "^6.4.17",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
-  },
-  "dependencies": {
-    "@types/express-session": "^1.18.1",
+    "typescript": "^5.7.3",
+    "@types/cookie-parser": "^1.4.8",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/express-session": "^1.18.1"
+  },
+  "dependencies": {
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -32,6 +34,7 @@
     "mongoose": "^8.9.4",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1"
   }
 }
